--- a/css/style.less
+++ b/css/style.less
@@ -79,172 +79,182 @@ a {
 
 /* ------------------------------- END RECURENTES -- */
 
-div.content {
-    height: 85%;
+main {
+    height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
-    div.card {
-        background-color: hsl(216, 50%, 16%);
-        font-size: 18px;
-        width: 400px;
-        height: auto;
-        border-radius: 20px;
+    div.content {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
-        div.nft_prev {
-            padding: 6%;
+        div.card {
+            background-color: hsl(216, 50%, 16%);
+            font-size: 18px;
+            width: 400px;
+            height: auto;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: column;
 
-            a {
-                display: block;
-                position: relative;
+            div.nft_prev {
+                padding: 6%;
 
-                img {
-                    width: 100%;
-                    height: auto;
-                    margin: 0 auto;
-                    border-radius: 20px;
-                }
+                a {
+                    display: block;
+                    position: relative;
 
-                div.overlay {
-                    margin: 0 auto;
-                    border-radius: 20px;
-                    position: absolute;
-                    top: 0;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-                    height: 100%;
-                    width: 100%;
-                    display: none;
-                    background-color: rgba(0, 255, 247, 0.562);
-                    text-align: center;
-
-                    i {
-                        font-size: 40px;
-                        color: hsl(0, 0%, 100%);
+                    img {
+                        width: 100%;
+                        height: auto;
+                        margin: 0 auto;
+                        border-radius: 20px;
                     }
-                }
-            }
 
-            &:hover {
-                div.overlay {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-        }
+                    div.overlay {
+                        margin: 0 auto;
+                        border-radius: 20px;
+                        position: absolute;
+                        top: 0;
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                        height: 100%;
+                        width: 100%;
+                        display: none;
+                        background-color: rgba(0, 255, 247, 0.562);
+                        text-align: center;
 
-        div.infos {
-            padding: 0% 6% 6% 6%;
-
-            a {
-                h2 {
-                    color: hsl(0, 0%, 100%);
-                    font-weight: 600;
+                        i {
+                            font-size: 40px;
+                            color: hsl(0, 0%, 100%);
+                        }
+                    }
                 }
 
                 &:hover {
-                    h2 {
-                        color: hsl(178, 100%, 50%);
+                    div.overlay {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                     }
                 }
             }
 
-            p {
-                padding: 4% 0%;
-                color: hsl(214, 54%, 71%);
-                font-size: 18px;
-                font-weight: 300;
-                letter-spacing: 1px;
-            }
-        }
-
-        div.datas {
-            padding: 0 5%;
-            display: flex;
-            justify-content: space-between;
-
-            p:nth-of-type(1) {
-                color: hsl(178, 100%, 50%);
-                position: relative;
-
-                &::before {
-                    content: url(../img/icon-ethereum.svg);
-                    display: block;
-                    position: absolute;
-                    left: -20%;
-                    top: 32%;
-                }
-            }
-
-            p:nth-of-type(2) {
-                position: relative;
-
-                &::before {
-                    content: url(../img/icon-clock.svg);
-                    display: block;
-                    position: absolute;
-                    left: -23%;
-                    top: 32%;
-                }
-            }
-        }
-
-        span {
-            display: block;
-            width: 100%;
-            height: 1px;
-            background-color: hsl(215, 32%, 27%);
-        }
-
-        div.author {
-            padding: 4% 0%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-
-            div.icon {
-                width: 20%;
-
-                img {
-                    margin: 0 auto;
-                    border: 1px solid white;
-                    border-radius: 50%;
-                    width: 65%;
-                    height: auto;
-                }
-            }
-
-            p {
-                width: 100%;
-                letter-spacing: 0px;
+            div.infos {
+                padding: 0% 6% 6% 6%;
 
                 a {
-                    color: hsl(0, 0%, 100%);
+                    h2 {
+                        color: hsl(0, 0%, 100%);
+                        font-weight: 600;
+                    }
 
                     &:hover {
-                        color: hsl(178, 100%, 50%);
+                        h2 {
+                            color: hsl(178, 100%, 50%);
+                        }
+                    }
+                }
+
+                p {
+                    padding: 4% 0%;
+                    color: hsl(214, 54%, 71%);
+                    font-size: 18px;
+                    font-weight: 300;
+                    letter-spacing: 1px;
+                }
+            }
+
+            div.datas {
+                padding: 0 5%;
+                display: flex;
+                justify-content: space-between;
+
+                p:nth-of-type(1) {
+                    color: hsl(178, 100%, 50%);
+                    font-weight: 600;
+                    position: relative;
+
+                    &::before {
+                        content: url(../img/icon-ethereum.svg);
+                        display: block;
+                        position: absolute;
+                        left: -20%;
+                        top: 32%;
+                    }
+                }
+
+                p:nth-of-type(2) {
+                    position: relative;
+
+                    &::before {
+                        content: url(../img/icon-clock.svg);
+                        display: block;
+                        position: absolute;
+                        left: -23%;
+                        top: 32%;
+                    }
+                }
+            }
+
+            span {
+                display: block;
+                width: 100%;
+                height: 1px;
+                background-color: hsl(215, 32%, 27%);
+            }
+
+            div.author {
+                padding: 4% 0%;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                div.icon {
+                    width: 20%;
+
+                    img {
+                        margin: 0 auto;
+                        border: 1px solid white;
+                        border-radius: 50%;
+                        width: 65%;
+                        height: auto;
+                    }
+                }
+
+                p {
+                    width: 100%;
+                    letter-spacing: 0px;
+
+                    a {
+                        color: hsl(0, 0%, 100%);
+
+                        &:hover {
+                            color: hsl(178, 100%, 50%);
+                        }
                     }
                 }
             }
         }
     }
+
+    div.attribution {
+        padding-top: 5%;
+        color: hsl(0, 0%, 100%);
+        font-size: 16px;
+        a{
+            &:hover{
+                color: hsl(178, 100%, 50%);
+            }
+        }
+    }
 }
-
-div.attribution{
-    color: hsl(0, 0%, 100%);
-    font-size: 16px;
-}
-
-
-
-
 
 
 
