--- a/order-summary-component-main/css/style.less
+++ b/order-summary-component-main/css/style.less
@@ -108,6 +108,7 @@ main {
     width: 100%;
     height: 90%;
     display: flex;
+    flex-direction: column;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -233,7 +234,7 @@ main {
     }
 }
 
-section.credits{
+div.credits{
     div.attribution{
         font-size: 16px;
         text-align: center;
@@ -262,7 +263,7 @@ section.credits{
         padding: 0% 5%;
         margin: 0 auto;
         background-image: url('../images/pattern-background-mobile.svg');
-
+        flex-direction: row;
         article {
             div.content {
                 div.price {
@@ -273,6 +274,9 @@ section.credits{
                     }
                 }
             }
+        }
+        div.credits{
+            display: none;
         }
     }
 }
