--- a/chat-app-css-illustration-master/css/style.less
+++ b/chat-app-css-illustration-master/css/style.less
@@ -344,7 +344,7 @@ main {
 
         // END PHONE
 
-        div.text {
+        footer.text {
             width: 50%;
 
             span {
@@ -405,7 +405,7 @@ main {
 
             // END PHONE
 
-            div.text {
+            footer.text {
                 width: 100%;
                 padding-top: 15%;
                 text-align: center;
