--- a/order-summary-component-main/css/style.less
+++ b/order-summary-component-main/css/style.less
@@ -234,20 +234,20 @@ main {
     }
 }
 
-div.credits {
-    div.attribution {
-        font-size: 16px;
-        text-align: center;
+// div.credits {
+//     div.attribution {
+//         font-size: 16px;
+//         text-align: center;
 
-        a {
-            color: hsl(245, 83%, 68%);
+//         a {
+//             color: hsl(245, 83%, 68%);
 
-            &:hover {
-                color: hsl(245, 75%, 52%);
-            }
-        }
-    }
-}
+//             &:hover {
+//                 color: hsl(245, 75%, 52%);
+//             }
+//         }
+//     }
+// }
 
 
 /* ------------------------------------------------------------------------- */
@@ -273,8 +273,8 @@ div.credits {
             }
         }
 
-        div.credits {
-            display: none;
-        }
+        // div.credits {
+        //     display: none;
+        // }
     }
 }
