--- a/3-column-preview-card-component-main/css/style.less
+++ b/3-column-preview-card-component-main/css/style.less
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-//--960-768-600-414-375-360
-//width: ~'calc(50% - 20px)';
 
 header, section, footer, aside, nav, main, article, figure {
     display: block; 
@@ -16,15 +14,16 @@ div, header, nav, article, section, aside, footer, h1, h2, h3, h4, h5, h6, p, a,
 }
 html, body {
 	height: 100%;
-	background-color: #a0a0a0;
+	background-color: black;
 	border: 0 solid transparent;
-	font-size: 16px;
+	font-size: 15px;
 	margin: 0;
 	min-height: 100%;
 	padding: 0;
 	width: 100%;
 	display: block;
-	font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+	font-family: 'Lexend Deca', sans-serif;
 }
 
 img, object, embed, canvas, video, audio, picture {
@@ -38,11 +37,6 @@ a {
     text-decoration: none;
     color: black;
 }
-
-//@font-face{
-//   font-family: 'Nom de la font';
-//    src: url('../font/Nom de la font .ttf');
-//}
 
 /* ------------------------------- RECURENTES -- */
 .clear {
@@ -62,6 +56,72 @@ a {
     margin: 0 auto;
 }
 /* ------------------------------- END RECURENTES -- */
+
+main{
+    
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    section.cards{
+        width: 1440px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        height: 84.5%;
+        background-color: #fff;
+        div.content{
+            display: flex;
+            align-items: center;
+            padding: 0% 18%;
+            article{
+                width: calc(100% / 3);
+                height: 57%;
+                padding: 0% 5%;
+                flex-direction: column;
+                display: flex;
+                justify-content: space-evenly;                
+                div.icon{
+                    padding: 5% 0%;
+                }
+                h2{
+                    font-family: 'Big Shoulders Display', cursive;
+                    font-weight: 700;
+                    font-size: 42px;
+                    text-transform: uppercase;
+                    color: hsl(0, 0%, 95%);
+                    padding-top: 5%;
+                }
+                p{
+                    color: hsla(0, 0%, 100%, 0.75);
+                    line-height: 24px;
+                    padding-bottom: 30%;
+                    
+                }
+                a{
+                    background-color: hsl(0, 0%, 95%);
+                    width: fit-content;
+                    padding: 2% 5%;
+                    border-radius: 20px;
+                }
+                
+            }
+            article:nth-of-type(1){
+                background-color: hsl(31, 77%, 52%);
+                border-radius: 10px 0px 0px 10px;
+            }
+            article:nth-of-type(2){
+                background-color: hsl(184, 100%, 22%);
+            }
+            article:nth-of-type(3){
+                background-color: hsl(179, 100%, 13%);
+                border-radius: 0px 10px 10px 0px;
+            }
+        }
+    }
+}
 
 
 
