--- a/Mila_website/css/style.sass
+++ b/Mila_website/css/style.sass
@@ -16,7 +16,6 @@ body
   position: relative
   font-family: sans-serif
   overflow: hidden
-  cursor: none
 
 .lines
   position: absolute
@@ -62,7 +61,6 @@ body
     
 @keyframes drop
   0%
-    top: -50%;
+    top: -50%
   100%
-    top: 110%;
-
+    top: 110%
