--- a/Mila_website/css/style.css
+++ b/Mila_website/css/style.css
@@ -3,16 +3,15 @@
   padding: 0;
   box-sizing: border-box !important;
 }
-
-html, body {
+html,
+body {
   height: 100%;
 }
-
 body {
   display: table;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #171717;
   color: #000;
   line-height: 1.6;
   position: relative;
@@ -20,30 +19,6 @@ body {
   overflow: hidden;
   cursor: none;
 }
-
-.cursor-dot{
-  width: 5px;
-  height: 5px;
-  background-color: rgb(23, 23, 23);
- }
-
- .cursor-outline{
-  width: 30px;
-  height: 30px;
-  border: 2px solid hsla(0, 0%, 10%, 0.5);
- }
- 
- .cursor-dot,
- .cursor-outline {
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  z-index: 1;
-  pointer-events: none;
- }
-
 .lines {
   position: absolute;
   top: 0;
@@ -53,25 +28,24 @@ body {
   margin: auto;
   width: 90vw;
 }
-
 .line {
   position: absolute;
   width: 1px;
   height: 100%;
   top: 0;
   left: 50%;
-  background: rgba(135, 135, 135, 0.189);
+  background: rgba(255, 255, 255, 0.1);
   overflow: hidden;
 }
 .line::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   height: 15vh;
   width: 100%;
   top: -50%;
   left: 0;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #2f2f2f 75%, #2f2f2f 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
   animation: drop 7s 0s infinite;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
@@ -88,7 +62,6 @@ body {
 .line:nth-child(3)::after {
   animation-delay: 2.5s;
 }
-
 @keyframes drop {
   0% {
     top: -50%;
