--- a/Mila_website/css/style.less
+++ b/Mila_website/css/style.less
@@ -1,3 +1,8 @@
+@hover-color: #d6bb73;
+@contact-bg-color: #d6bb73;
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +18,7 @@ body {
   display: table;
   width: 100%;
   height: 100%;
-  background-color: #171717;
+  background-color: #ffffff;
   color: #000;
   line-height: 1.6;
   position: relative;
@@ -38,7 +43,7 @@ body {
   height: 100%;
   top: 0;
   left: 50%;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.073);
   overflow: hidden;
 
   &::after {
@@ -72,6 +77,52 @@ body {
   }
 }
 
+.menu {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding: 10px 20px;
+
+    .logo {
+        flex: 0 0 auto;
+
+        img {
+            height: 50px; // Ajustez la taille de l'image selon vos besoins
+        }
+    }
+
+    .spacer {
+        flex: 1;
+    }
+
+    .menu-buttons {
+        display: flex;
+        justify-content: space-around;
+        flex: 0 0 60%; // Ajustez la largeur selon vos besoins
+
+        .menu-button {
+            text-decoration: none;
+            color: black;
+            padding: 10px 15px;
+            transition: color 0.3s;
+
+            &:hover {
+                color: @hover-color;
+            }
+
+            &.contact {
+                background-color: @contact-bg-color;
+                padding: 10px 20px;
+                border-radius: 5px; // Ajoutez un bord arrondi si nécessaire
+                color: black;
+
+                &:hover {
+                    color: white; // Change le texte en blanc au survol si besoin
+                }
+            }
+        }
+    }
+}
 @keyframes drop {
   0% {
     top: -50%;
