--- a/Mila_website/css/style.css
+++ b/Mila_website/css/style.css
@@ -39,7 +39,7 @@ img {
 html,
 body {
   height: 100%;
-  background-color: #040404;
+  background-color: #ffffff;
   border: 0 solid transparent;
   font-size: 16px;
   margin: 0;
@@ -47,33 +47,13 @@ body {
   padding: 0;
   width: 100%;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Neue';
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-html::before,
-body::before {
-  position: fixed;
-  top: 500px;
-  left: 100px;
-  bottom: 0;
-  content: '';
-  width: 400px;
-  height: 400px;
-  border: 2px solid rgba(255, 255, 255, 0.05);
-  z-index: -1;
-  transform: rotate(20deg);
-}
-html::after,
-body::after {
-  position: fixed;
-  top: -150px;
-  right: -50px;
-  bottom: 0;
-  content: '';
-  width: 400px;
-  height: 600px;
-  border: 2px solid rgba(255, 255, 255, 0.05);
-  z-index: -1;
-  transform: rotate(-30deg);
+html ::-webkit-scrollbar,
+body ::-webkit-scrollbar {
+  display: none;
 }
 img,
 object,
@@ -90,7 +70,7 @@ img {
 }
 a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
 }
 /* ------------------------------- RECURRENT -- */
 .btnt {
