--- a/Mila_website/css/style.less
+++ b/Mila_website/css/style.less
@@ -1,4 +1,6 @@
 @charset "utf-8";
+@luxant: #d6bb73;
+
 
 header,
 section,
@@ -43,7 +45,7 @@ img {
 html,
 body {
   height: 100%;
-  background-color: #040404;
+  background-color: #ffffff;
   border: 0 solid transparent;
   font-size: 16px;
   margin: 0;
@@ -51,35 +53,14 @@ body {
   padding: 0;
   width: 100%;
   display: block;
-  font-family: 'Roboto', sans-serif;
-}
+  font-family: 'Neue';
 
-html::before,
-body::before {
-  position: fixed;
-  top: 500px;
-  left: 100px;
-  bottom: 0;
-  content: '';
-  width: 400px;
-  height: 400px;
-  border: 2px solid rgba(255, 255, 255, 0.05);
-  z-index: -1;
-  transform: rotate(20deg);
-}
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
-html::after,
-body::after {
-  position: fixed;
-  top: -150px;
-  right: -50px;
-  bottom: 0;
-  content: '';
-  width: 400px;
-  height: 600px;
-  border: 2px solid rgba(255, 255, 255, 0.05);
-  z-index: -1;
-  transform: rotate(-30deg);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 img,
@@ -99,7 +80,7 @@ img {
 
 a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
 }
 
 /* ------------------------------- RECURRENT -- */
@@ -155,7 +136,7 @@ a {
     display: none;
   }
 
-  > span {
+  >span {
     background-color: transparent;
     margin: 0 auto;
     color: #ffffff;
@@ -167,4 +148,5 @@ a {
     font-weight: 200;
   }
 }
+
 /* ------------------------------- END RECURRENT -- */
