--- a/Mila_website/css/style.css
+++ b/Mila_website/css/style.css
@@ -1,4 +1,172 @@
 @charset "utf-8";
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs13FvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs169vgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs18NvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1y9ogUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1xZogUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlGdRyC6CRYbkQiwLByQw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlGdRyC6CRYbkQipLNyQw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlFdRyC6CRYbkQaCA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlGdRyC6CRYbkQi_LJyQw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlGdRyC6CRYbkQi0LVyQw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlGdRyC6CRYbkQitLRyQw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlEdRyC6CRYZo47KLE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlEdRyC6CRYZuo4KLE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlLdRyC6CRYXkY.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlEdRyC6CRYZrI5KLE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlEdRyC6CRYZp4-KLE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Krub';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/krub/v9/sZlEdRyC6CRYZvo_KLE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs13FvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs169vgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs18NvgUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1y9ogUE.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1xZogUE.ttf) format('truetype');
+}
 header,
 section,
 footer,
@@ -47,7 +215,10 @@ body {
   padding: 0;
   width: 100%;
   display: block;
-  font-family: 'Neue';
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -128,3 +299,82 @@ a {
   font-weight: 200;
 }
 /* ------------------------------- END RECURRENT -- */
+header {
+  height: 100vh;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+header div.nav {
+  position: fixed;
+  height: 15%;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header div.nav div.logo {
+  width: fit-content;
+}
+header div.nav div.menu {
+  width: 50%;
+}
+header div.nav div.menu ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+header div.nav div.menu ul li {
+  width: -webkit-fill-available;
+  list-style-type: none;
+  text-align: end;
+}
+header div.nav div.menu ul li a {
+  font-weight: 600;
+  font-size: 16px;
+}
+header div.nav div.menu ul li a img {
+  display: inline;
+}
+header div.main {
+  display: flex;
+  height: 85%;
+  width: 100%;
+  align-self: flex-end;
+  align-items: flex-end;
+}
+header div.main div.left {
+  height: 100%;
+  width: 33.33333333%;
+  background-color: #b2c888;
+}
+header div.main div.mid {
+  height: 100%;
+  width: 33.33333333%;
+}
+header div.main div.mid div.bg {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header div.main div.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3%;
+  height: 100%;
+  width: 33.33333333%;
+  background-color: grey;
+}
+header div.main div.right h1 {
+  font-family: 'Krub';
+  text-transform: uppercase;
+  font-weight: 600;
+}
+header div.main div.right p {
+  font-family: 'krub';
+  font-weight: 600;
+  font-size: 20px;
+  width: 70%;
+}
